change db ip & email host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 server.port=7777
 #EMAIL CONFIGURATION
 spring.mail.default-encoding=UTF-8
-spring.mail.host=10.17.6.210
+spring.mail.host=host
 spring.mail.port=25
 #spring.mail.properties.*= # Additional JavaMail session properties.
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
-spring.mail.username=geol-support@huaweiservices.com
+spring.mail.username=geol@geol.com
 
 #SECURITY
 security.basic.authorize-mode=role
 security.basic.enabled=false
 
 #database
-spring.datasource.url=jdbc:mysql://10.23.32.109/geolv2?zeroDateTimeBehavior=convertToNull
-spring.datasource.username=fbss
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost/geolv2?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 3600000
