--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ security.basic.authorize-mode=role
 security.basic.enabled=false
 
 #database
-spring.datasource.url=jdbc:mysql://localhost/geolv2?zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://10.23.32.109/geolv2?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=fbss
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 3600000
