Major update in GIS module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=7777
 #EMAIL CONFIGURATION
 spring.mail.default-encoding=UTF-8
-spring.mail.host=host
+spring.mail.host=10.17.6.210
 spring.mail.port=25
 #spring.mail.properties.*= # Additional JavaMail session properties.
 spring.mail.protocol=smtp
